# par2cmdline-turbo.py

./: .gitignore  README.md  generate-wheels.sh  pyproject.toml  setup.py
par2/: __main__.py  cli.py
