[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "par2cmdline-turbo"
version = "1.1.1"
authors = [
  { name = "Brent Huisman", email = "brent@huisman.eu.org" },
]
maintainers = [
  { name = "Brent Huisman", email = "brent@huisman.eu.org" },
]
description = "Produce, verify and repair par2 files."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/brenthuisman/par2cmdline-turbo.py"
Issues = "https://github.com/brenthuisman/par2cmdline-turbo.py/issues"
Changelog = "https://github.com/brenthuisman/par2cmdline-turbo.py/releases"

[tool.setuptools]
include-package-data = true

[project.scripts]
par2 = "par2.cli:__call"

[tool.setuptools.packages.find]
include = ["par2", "par2.*"]
